fix: login-button z-index

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -12,13 +12,13 @@
     .menus-container {
         gap: 0.3vw;
         top: 2vw;
-        // left: 9.5vw;
         padding-left: 9.5vw;
         transition: 0.5s;
         position: fixed;
         height: 4vw;
         align-items: center;
         width: 100%;
+        z-index: 5;
 
         .login-button {
             position: absolute;
@@ -26,6 +26,7 @@
             padding: 0.5vw;
             background-color: white;
             color: $primary-color;
+            z-index: 9;
         }
 
         p {
